k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compute-electric
  labels:
    name: compute-electric
